grafana-single-pod.yml
# Save the output of this file and use kubectl create -f to import
# it into Kubernetes.
#
# Created with podman-4.0.2 | and modified by codesenju
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: grafana_ha
  name: grafana_ha
spec:
  containers:
  - name: grafana1
    image: docker.io/grafana/grafana:8.4.4
  - name: grafana2
    image: docker.io/grafana/grafana:8.4.4
  - name: proxy
    ports:
    - containerPort: 80
      hostPort: 4040
    args:
    - nginx
    - -g
    - daemon off;
    image: docker.io/library/nginx:alpine
  - name: postgress
    image: docker.io/library/postgres:12-alpine
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: db-data-pvc
  restartPolicy: Never
  volumes:
  - name: db-data-pvc
    persistentVolumeClaim:
      claimName: db-data-claim
restartPolicy: unless-stopped
