keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deploy
spec:
  selector:
    matchLabels:
      app: keycloak-deploy
  template:
    metadata:
      labels:
        app: keycloak-deploy
    spec:
      containers:
      - name: keycloak-deploy
        image: quay.io/keycloak/keycloak:17.0.1
        args:
        - start
        - --auto-build
        - --hostname=localhost
        - --https-certificate-file=/certs/cert.pem
        - --https-certificate-key-file=/certs/key.pem
        - --spi-theme-static-max-age=-1
        - --spi-theme-cache-themes=false
        - --spi-theme-cache-templates=false
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: keycloak-certs-vlm
          mountPath: "/certs"
          readOnly: true
      volumes:
      - name: keycloak-certs-vlm
        configMap:
          name: keycloak-certs
          items:
            - key: cert.pem
              path: cert.pem
            - key: key.pem
              path: key.pem
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
spec:
  selector:
    app: keycloak-deploy
  ports:
  - port: 80
    targetPort: 8443
