grafana-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-proxy
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "fasle"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-proxy-svc
            port:
              number: 80
